# uwupy

./: .gitignore  Cargo.toml  README  pyproject.toml
src/: lib.rs
