[build-system]
requires = ["maturin"]
build-backend = "maturin==1.3.0"

[project]
name = "uwupy"
version = "0.1.0"
description = ""
authors = [{ name = "Montel Edwards", email = "m@monteledwards.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README"
license = { text = "MIT" }
requires = ["maturin"]
build-backend = "maturin"


classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
